# pyrxing

./: .gitignore  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.github/workflows/: build.yml  test.yml
pyrxing/: Cargo.toml  benchmark.py  pyproject.toml  pyrxing.pyi  requirements.txt  test_decode.py
pyrxing/src/: error.rs  lib.rs
reader_core/: Cargo.toml
reader_core/src/: lib.rs
