[package]
name = "pyrxing"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyrxing"
crate-type = ["cdylib"]

[dependencies]
reader_core = { path = "../reader_core" }
pyo3 = { version = "0.24.0", features = ["extension-module"] }
image = "0.25.5"
