[package]
name = "pyrxing"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyrxing"
crate-type = ["cdylib"]

[dependencies]
reader_core = { path = "../reader_core" }
pyo3 = { version = "0.24.0", features = ["extension-module"] }
image = "0.25.5"
