[package]
name = "pyrxing"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyrxing"
crate-type = ["cdylib"]

[dependencies]
reader_core = { path = "../reader_core" }
pyo3 = { version = "0.29.0", features = ["extension-module"] }
image = { version = "0.25.6", default-features = false, features = ["png", "jpeg", "gif", "bmp", "tiff", "webp"] }
