[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "pyrxing"
dynamic = ["version"]
description = "A barcode reader extension module using zxing-cpp and pyo3"
authors = [{name = "Takanobu Nagumo", email = "nagumo5683@gmail.com"}]
readme = "README.md"
license = {text = "Apache-2.0"}
keywords = [
    "barcode", 
    "qr-code", 
    "scanner", 
    "decoder", 
    "zxing", 
    "computer-vision", 
    "image-processing",
    "rust",
    "alpine"
]

requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",

    "Programming Language :: Python :: Implementation :: CPython",

    "License :: OSI Approved :: Apache Software License",
]

[tool.maturin]
features = ["pyo3/extension-module"]
name = "pyrxing"

[project.urls]
"Homepage" = "https://github.com/tanagumo/pyrxing"
